# cognitive-core-engine

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  ASSETS-TODO.md  CHANGELOG.md  CHECKSUMS.txt  CONTRIBUTING.md  CORE_LOCK.md  Dockerfile  LICENSE  MANIFEST.json  Makefile  PR_CHECKLIST.md  README-TESTING.md  README.md  SECURITY.md  STABILITY.md  TESTING_PROTOCOL.md  alembic.ini  docker-compose.yml  go.mod  jest.config.ts  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release-please.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0001_initial.py
benchmarks/golden12/: rubrics.yaml  tasks.jsonl
config/: defaults.yaml  policies.yaml
config/agents/: critic.yaml  proponent.yaml
config/rubrics/: umaa_epaup_v1.yaml
data/demo/: prompts.jsonl
data/demo/isr_networks/: random_64.edgelist  ring_32.edgelist
deployment/: cognitive_core.service
deployment/nginx/: cognitive_core.conf
docs/: API.md  ARCHITECTURE.md  CONTRACTS.md  OPERATIONS.md  aots_debate.md  api.md  architecture.md  dev.md  guards.md  index.md  isr.md  metrics.md  operations.md  plugins.md  quickstart.md
docs/javascripts/: mermaid-init.js
examples/: cli_scenarios.md
legacy/original_upload/sigma-prime-cognitive-core/: CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  LICENSE  Makefile  PROJECT_PROTOCOL.md  README.md  SECURITY.md  ULTRASIM.md  VISION_MISSION.md  pyproject.toml  pytest.ini  requirements-dev.txt
legacy/original_upload/sigma-prime-cognitive-core/api/: app.py
legacy/original_upload/sigma-prime-cognitive-core/docs/: ENGINEERING_STANDARDS.md  README.md  SYSTEM_PROMPT_EXPERT.md  VALIDATION_CHECKLIST.md
legacy/original_upload/sigma-prime-cognitive-core/docs/raw/: Валідація.odt  Енігма повна 0.1 версія.odt  Нейрофізіо-Біоінформатична Система “Фрактального Я.odt  Цифрова структура Ярослава.odt  Ядро Agi Yaroslav Vasilenko.odt  свідомість в мікротрубочках Дослід.odt  цифрова капсула свідомості.odt
legacy/original_upload/sigma-prime-cognitive-core/ethics/: ETHICS.md  PRIVACY.md
legacy/original_upload/sigma-prime-cognitive-core/manifests/: CHECKSUMS_raw_docs.txt  MANIFEST_raw_docs.csv
legacy/original_upload/sigma-prime-cognitive-core/tests/: test_api_sigma.py  test_cli.py  test_math_utils.py  test_metrics_property.py  test_metrics_unit.py  test_zip_bomb.py  test_zipci_sanitize.py  util_zip.py
legacy/original_upload/sigma-prime-cognitive-core/tools/algorithms/: __init__.py  math_utils.py
legacy/original_upload/sigma-prime-cognitive-core/tools/sigma_prime/: __init__.py  metrics.py
legacy/original_upload/sigma-prime-cognitive-core/tools/zipci/: cli.py  runner.py  util.py
src/cognitive_core/: __init__.py  api.py  cli.py  database.py  db.py  rate_limiter.py
src/cognitive_core/_compat/: __init__.py  pydantic_settings.py
src/cognitive_core/api/: __init__.py  auth.py  logging_middleware.py  main.py  middleware_guards.py  rate_limit.py  routes_isr.py  routes_metrics.py  security.py
src/cognitive_core/app/: services.py
src/cognitive_core/config/: __init__.py  settings.py
src/cognitive_core/core/: agents_router.py  math_utils.py  pipeline_executor.py  pipeline_executor_async.py
src/cognitive_core/domain/: __init__.py  agents.py  entities.py  pipelines.py
src/cognitive_core/guards/: __init__.py  filters.py  pii.py  policies.py  validators.py
src/cognitive_core/infra/: logging.py  metrics.py
src/cognitive_core/isr/: __init__.py  io.py  kuramoto.py  networks.py  spectral.py
src/cognitive_core_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pydantic_settings/: __init__.py
tests/: conftest.py  pipeline_registry_stub.py  test_api_validation.py  test_cli.py  test_cli_integration.py  test_cli_pipeline_unit.py  test_docs_build.py  test_dot_api.py  test_health.py  test_health_api.py  test_math_api.py  test_math_consistency.py  test_pipeline_executor.py  test_pipelines_api.py  test_plugins_registry.py  test_smoke.py  test_solve2x2_api.py  test_sse_api.py  test_version.py
tests/api/: test_auth.py  test_memory_api.py  test_root.py
tests/benchmarks/: test_pipeline_bench.py
tests/cli/: test_cli.py  test_cli_remote.py
tests/compat/: test_api_contract.py
tests/config/: test_settings_env_stub.py
tests/db/: test_migrations.py
tests/deployment/: test_service_file.py
tests/e2e/: test_api.py
tests/go/: sanity_test.go
tests/load/: locustfile.py
tests/memory/: test_adapters.py
tests/node/: sanity.spec.ts
tests/pipelines/: test_isr_run.py
tests/plugins/: test_attention_router.py
tests/prompting/: test_epaup.py
tests/property/: test_dot_property.py  test_solve2x2_property.py
tests/repo/: test_no_placeholder_keys.py  test_readme_newline.py  test_repo_sanity.py  test_workflows_yaml_valid.py
tests/rust/: sanity.rs
tests/security/: test_api_key_access.py  test_api_key_auth.py  test_api_key_no_key.py  test_api_key_optional.py  test_headers.py  test_health_no_header_without_key.py  test_rate_limit.py
tests/tools/: test_gen_assets.py
tests/unit/: test_agents_router.py  test_llm_provider_async.py  test_llm_provider_cost.py  test_llm_provider_wrapper.py  test_openai_async_adapter.py  test_pipeline_executor_async.py  test_rate_limit.py  test_rate_limit_unit.py  test_services.py  test_telemetry.py
tools/: check_lock.py  gen_assets.py  validate.py
(+40 files in other folders)
