[project]
name = "sigma-prime-core"
version = "0.1.0"
description = "Operational metrics & ZIPCI utilities for Σ'-Prime cognitive core"
authors = [{name="Yaroslav V.", email="dev@example.org"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "hypothesis>=6.100",
  "numpy>=2.1",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.1",
  "types-requests",
  "codespell>=2.3.0"
]

[project.scripts]
zipci-scan = "tools.zipci.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","W","B","UP","C90"]
lint.ignore = ["E203","E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
